docs/api/qiskit/0.19/qiskit.transpiler.passes.CountOpsLongestPath.mdx
---
title: CountOpsLongestPath (v0.19)
description: API reference for qiskit.transpiler.passes.CountOpsLongestPath in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CountOpsLongestPath
---

# CountOpsLongestPath

<Class id="qiskit.transpiler.passes.CountOpsLongestPath" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/analysis/count_ops_longest_path.py" signature="CountOpsLongestPath(*args, **kwargs)" modifiers="class">
  Count the operations on the longest path in a DAGcircuit.

  The result is saved in `property_set['count_ops_longest_path']` as an integer.

  ## Attributes

  <span id="countopslongestpath-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.CountOpsLongestPath.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="countopslongestpath-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.CountOpsLongestPath.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="countopslongestpath-name" />

  ### name

  <Function id="qiskit.transpiler.passes.CountOpsLongestPath.name" signature="CountOpsLongestPath.name()">
    Return the name of the pass.
  </Function>

  <span id="countopslongestpath-run" />

  ### run

  <Function id="qiskit.transpiler.passes.CountOpsLongestPath.run" signature="CountOpsLongestPath.run(dag)">
    Run the CountOpsLongestPath pass on dag.
  </Function>
</Class>

