docs/api/qiskit/0.24/qiskit.transpiler.passes.CountOpsLongestPath.mdx
---
title: CountOpsLongestPath
description: API reference for qiskit.transpiler.passes.CountOpsLongestPath
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CountOpsLongestPath
---

<span id="qiskit-transpiler-passes-countopslongestpath" />

# qiskit.transpiler.passes.CountOpsLongestPath

<Class id="qiskit.transpiler.passes.CountOpsLongestPath" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/transpiler/passes/analysis/count_ops_longest_path.py" signature="CountOpsLongestPath(*args, **kwargs)">
  Count the operations on the longest path in a DAGcircuit.

  The result is saved in `property_set['count_ops_longest_path']` as an integer.

  ### \_\_init\_\_

  <Function id="qiskit.transpiler.passes.CountOpsLongestPath.__init__" name="__init__" signature="__init__()">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                |                                          |
  | ------------------------------------------------------------------------------------------------------------------------------ | ---------------------------------------- |
  | [`__init__`](#qiskit.transpiler.passes.CountOpsLongestPath.__init__ "qiskit.transpiler.passes.CountOpsLongestPath.__init__")() | Initialize self.                         |
  | [`name`](#qiskit.transpiler.passes.CountOpsLongestPath.name "qiskit.transpiler.passes.CountOpsLongestPath.name")()             | Return the name of the pass.             |
  | [`run`](#qiskit.transpiler.passes.CountOpsLongestPath.run "qiskit.transpiler.passes.CountOpsLongestPath.run")(dag)             | Run the CountOpsLongestPath pass on dag. |

  ## Attributes

  |                                                                                                                                                                        |                                             |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------- |
  | [`is_analysis_pass`](#qiskit.transpiler.passes.CountOpsLongestPath.is_analysis_pass "qiskit.transpiler.passes.CountOpsLongestPath.is_analysis_pass")                   | Check if the pass is an analysis pass.      |
  | [`is_transformation_pass`](#qiskit.transpiler.passes.CountOpsLongestPath.is_transformation_pass "qiskit.transpiler.passes.CountOpsLongestPath.is_transformation_pass") | Check if the pass is a transformation pass. |

  ### is\_analysis\_pass

  <Function id="qiskit.transpiler.passes.CountOpsLongestPath.is_analysis_pass" name="is_analysis_pass" signature="property is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Function>

  ### is\_transformation\_pass

  <Function id="qiskit.transpiler.passes.CountOpsLongestPath.is_transformation_pass" name="is_transformation_pass" signature="property is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.CountOpsLongestPath.name" name="name" signature="name()">
    Return the name of the pass.
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.CountOpsLongestPath.run" name="run" signature="run(dag)">
    Run the CountOpsLongestPath pass on dag.
  </Function>
</Class>

